LWCLearnwithFLOWOrg/force-app/main/default/objects/Industry_Translation__c/Industry_Translation__c.object-meta.xml
<CustomObject>
    <description>Only for use by Marketing / Sales Operations. This controls how Industry values are translated from external partners (ex. ZoomInfo) to the Industry__c field, which matches LinkedIn values. This is done through the INDUSTRY_Translation class, which is accessed by various triggers.</description>
    <label>Industry Translation</label>
    <nameField>
        <displayFormat>ITR-{000000}</displayFormat>
        <label>Industry Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>