LWCLearnwithFLOWOrg/force-app/main/default/objects/Industry_Translation__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>MANUAL - The Industry as it comes from the 3rd party provider.</description>
    <label>Industry</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>