LWCLearnwithFLOWOrg/force-app/main/default/objects/Industry_Translation__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>MANUAL - The external source which provided this value.</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>