LWCLearnwithFLOWOrg/force-app/main/default/objects/Industry_Translation__c/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <description>MANUAL - The translated value that will go into the appropriate custom Industry field on Lead or Account.</description>
    <label>Translation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>